# NiaPy

./: .all-contributorsrc  .appveyor.yml  .bumpversion.cfg  .flake8  .gitignore  .pycodestyle.ini  .pydocstyle.ini  .pylint.ini  .pyup.yml  .readthedocs.yaml  .readthedocs.yml  .scrutinizer.yml  .testmondata  .travis.yml  .verchew.ini  Algorithms.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTE_NEW_ALGORITHM.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  Problems.md  README.md  README.rst  _.appveyor.yml  codemeta.json  mkdocs.yml  pyproject.toml  scent.py  setup.py  test.txt
.github/: begginers_guide.md  beginners_guide.md  dependabot.yml  issue_template.md  mingw_install_guide.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: all_tests.yml  main.yml  publish.yml  publish_conda.yml  publish_pypi.yml  test_conda.yml
NiaPy/: __init__.py  argparser.py  examples  factory.py  runner.py
NiaPy/algorithms/: Utility.py  __init__.py  algorithm.py  individual.py  statistics.py  utility.py
NiaPy/benchmarks/: __init__.py  ackley.py  alpine.py  autocorelation.py  benchmark.py  bentcigar.py  chungReynolds.py  clustering.py  cosinemixture.py  csendes.py  discus.py  dixonprice.py  elliptic.py  griewank.py  happyCat.py  hgbat.py  infinity.py  katsuura.py  levy.py  michalewichz.py  michalewicz.py  perm.py  pinter.py  powell.py  qing.py  quintic.py  rastrigin.py  ridge.py  rosenbrock.py  salomon.py  schaffer.py  schumerSteiglitz.py  schwefel.py  shekel.py  sphere.py  step.py  stepint.py  styblinskiTang.py  sumSquares.py  trid.py  (+4 more)
NiaPy/data/: __init__.py  nemenyi.csv
NiaPy/task/: Task.py  __init__.py  countingtask.py  optimizationtype.py  stoppingtask.py  task.py  throwingtask.py  utility.py
NiaPy/tests/: conftest.py  test_aba.py  test_abc.py  test_algorithm.py  test_argparser.py  test_aso.py  test_ba.py  test_bbfwa.py  test_bea.py  test_benchmark.py  test_benchmark_functions.py  test_bfoa.py  test_ca.py  test_cro.py  test_cs.py  test_cso.py  test_de.py  test_dynnpjde.py  test_es.py  test_fa.py  test_factory.py  test_foa.py  test_fpa.py  test_fss.py  test_fwa.py  test_ga.py  test_gsa.py  test_gso.py  test_gwo.py  test_ha.py  test_hba.py  test_hc.py  test_hde.py  test_hho.py  test_hs.py  test_hsaba.py  test_ihc.py  test_iter_gen_counters.py  test_jade.py  test_jde.py  (+19 more)
NiaPy/util/: __init__.py  argparser.py  array.py  basicunit.py  distances.py  exception.py  margparser.py  random.py  repair.py  task.py  utility.py
conda/: conda_build_config.yaml  meta.yaml
conda-recipe/: build.sh  meta.yaml
config/testmondata/: macOS-latest_py3.10  macOS-latest_py3.6  macOS-latest_py3.7  macOS-latest_py3.8  macOS-latest_py3.9  ubuntu-latest_py3.10  ubuntu-latest_py3.6  ubuntu-latest_py3.7  ubuntu-latest_py3.8  ubuntu-latest_py3.9  windows-latest_py3.10  windows-latest_py3.6  windows-latest_py3.7  windows-latest_py3.8  windows-latest_py3.9
docs/: Makefile  index.md  make.bat  requirements.txt
docs/about/: license.md
docs/source/: about.rst  algorithms.rst  authors.rst  benchmarks.rst  changelog.rst  code_of_conduct.rst  conf.py  contributing_to_niapy.rst  documentation.rst  features.rst  getting_started.rst  index.rst  installation.rst  support.rst  testing.rst
examples/: about_algorithm.py  advanced_example.py  advanced_example_custom_pop.py  basic_customized_example.py  basic_example.py  basic_stats.py  callback.py  custom_benchmark.py  custom_init_population.py  custom_problem.py  log_results.py  margparser.py  maximization_example.py  run.py  run_aba.py  run_abc.py  run_agede.py  run_all.bat  run_all.sh  run_amsde.py  run_aso.py  run_ba.py  run_bbfwa.py  run_bea.py  run_benchmark.py  run_bfo.py  run_bfoa.py  run_ca.py  run_cec.py  run_cec2014.py  run_cec2015.py  run_clonalg.py  run_clpso.py  run_cmaes.py  run_cpso.py  run_cro.py  run_cs.py  run_cso.py  run_de.py  run_debsa.py  (+70 more)
examples/cec14/: Makefile  cec14_test_func.cpp  function_call.cpp  function_call.pyx  setup.py
examples/cec2014/: Makefile  cec14_test_func.cpp  cec14_test_func.h  cec2014.cpp  cec2014.pyx  setup.py
examples/cec2015/: Makefile  cec15_test_func.cpp  cec15_test_func.h  cec2015.cpp  cec2015.pyx  setup.py
examples/input_data/: M_10_D10.txt  M_10_D2.txt  M_11_D10.txt  M_11_D100.txt  M_11_D2.txt  M_11_D20.txt  M_12_D2.txt  M_12_D20.txt  M_12_D50.txt  M_13_D10.txt  M_13_D100.txt  M_13_D30.txt  M_14_D2.txt  M_14_D50.txt  M_15_D10.txt  M_15_D100.txt  M_15_D2.txt  M_15_D30.txt  M_18_D100.txt  M_18_D50.txt  M_19_D20.txt  M_1_D50.txt  M_20_D10.txt  M_20_D100.txt  M_20_D2.txt  M_20_D30.txt  M_22_D100.txt  M_22_D30.txt  M_23_D100.txt  M_23_D30.txt  M_23_D50.txt  M_24_D30.txt  M_25_D10.txt  M_25_D2.txt  M_25_D30.txt  M_25_D50.txt  M_26_D10.txt  M_26_D2.txt  M_26_D30.txt  M_27_D10.txt  (+40 more)
niapy/: __init__.py  callbacks.py  runner.py  task.py
niapy/algorithms/: __init__.py  algorithm.py  statistics.py  utility.py
niapy/benchmarks/: __init__.py  ackley.py  alpine.py  benchmark.py  bent_cigar.py  bentcigar.py  chungReynolds.py  chung_reynolds.py  cosine_mixture.py  cosinemixture.py  csendes.py  discus.py  dixon_price.py  dixonprice.py  elliptic.py  griewank.py  happyCat.py  happy_cat.py  hgbat.py  infinity.py  katsuura.py  levy.py  michalewichz.py  perm.py  pinter.py  powell.py  qing.py  quintic.py  rastrigin.py  ridge.py  rosenbrock.py  salomon.py  schaffer.py  schumerSteiglitz.py  schumer_steiglitz.py  schwefel.py  sphere.py  step.py  stepint.py  styblinskiTang.py  (+7 more)
niapy/problems/: __init__.py  (+39 more)
paper/: paper.bib  paper.md
tests/: __init__.py  conftest.py  test_aba.py  test_abc.py  test_algorithm.py  test_argparser.py  test_aso.py  test_ba.py  test_bea.py  test_bfo.py  test_ca.py  test_clonalg.py  test_cro.py  test_cs.py  test_cso.py  test_de.py  test_es.py  test_fa.py  test_foa.py  test_fpa.py  test_fss.py  test_fwa.py  test_ga.py  test_gsa.py  test_gso.py  test_gwo.py  test_hba.py  test_hc.py  test_hde.py  test_hho.py  test_hs.py  test_hsaba.py  test_ilshade.py  test_iter_gen_counters.py  test_jde.py  test_kh.py  test_loa.py  test_mbo.py  test_mfo.py  test_mke.py  (+12 more)
(+415 files in other folders)
