[project]
name = "niapy"
version = "2.7.0"
description = "Python micro framework for building nature-inspired algorithms."
authors = [{ name = "NiaOrg", email = "niapy.organization@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "nature-inspired algorithms",
    "evolutionary algorithms",
    "swarm intelligence",
    "optimization",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/NiaOrg/NiaPy"
Repository = "https://github.com/NiaOrg/NiaPy"
Documentation = "https://niapy.org/en/stable/"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
release = [
    "bump-my-version>=1.2.4",
    "git-changelog>=2.7.0",
    "pandoc>=2.4",
]

[tool.uv.build-backend]
source-include = [
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"


[tool.bumpversion]
current_version = "2.7.0"
allow_dirty = true
commit = true
tag = true
tag_name = "v{new_version}"
parse = '(?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+))(\-?((rc)?(?P<rc>\d+))?)'
serialize = [
	"{major}.{minor}.{patch}rc{rc}",
	"{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/niapy/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = "release = u'{current_version}'"
replace = "release = u'{new_version}'"

[tool.git-changelog]
convention = "basic"
in-place = true
marker-line = "<!-- insertion marker -->"
output = "CHANGELOG.md"
parse-refs = true
parse-trailers = true
repository = "."
provider = "github"
template = "keepachangelog"
